tests/ui/fail/invalid_predicate_syntax.stderr
error: unexpected end of input, expected an expression
 --> tests/ui/fail/invalid_predicate_syntax.rs:3:1
  |
3 | #[requires(x >)]
  | ^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `requires` (in Nightly builds, run with -Z macro-backtrace for more info)
